Switch license to MIT + APLv2 (Closes #3)
According to the GPL FAQ, LGPL forces you to provide all the objects or
sources required to relink a binary, when using a static library.
In Rust, the default is to use static linking, and providing all objects
is not really suitable.
To allow a wider use of this crate, switch to MIT + APLv2.

[1] https://www.gnu.org/licenses/gpl-faq.html#LGPLStaticVsDynamic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 description = "Parser for the RADIUS protocol"
-license = "LGPL-2.1+"
+license = "MIT/Apache-2.0"
 keywords = ["RADIUS","parser","nom"]
 homepage = "https://github.com/rusticata/radius-parser"
 repository = "https://github.com/rusticata/radius-parser.git"
