Upgrade to nom 4.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ keywords = ["RADIUS","parser","nom"]
 homepage = "https://github.com/rusticata/radius-parser"
 repository = "https://github.com/rusticata/radius-parser.git"
 name = "radius-parser"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
 categories = ["parsing"]
 
 [dependencies]
-nom = {version = "^3.0", features = ["verbose-errors"]}
+nom = {version = "4.0", features = ["verbose-errors"]}
 enum_primitive = "^0"
 
 [badges]
