Set edition to 2018

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ repository = "https://github.com/rusticata/radius-parser.git"
 name = "radius-parser"
 version = "0.2.0"
 authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
-categories = ["parsing"]
+readme = "README.md"
+categories = ["network-programming", "parser-implementations"]
+edition = "2018"
 
 [dependencies]
 nom = "5.0"
